--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,11 @@
 	"dependencies": {
 		"@internationalized/date": "^3.5.5",
 		"@pqina/svelte-pintura": "^9.1.0",
+		"axios": "^1.7.7",
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
+		"cookie": "^0.7.1",
 		"lucide-svelte": "^0.416.0",
 		"mode-watcher": "^0.4.0",
 		"svelte-sonner": "^0.3.27",
